--- a/resources/lang/en/index.json
+++ b/resources/lang/en/index.json
@@ -30,6 +30,19 @@
   "sponsors_mariia": "Mariia",
   "sponsors_julia": "Julia",
   "sponsors_program": "Download sponsorship proposal",
+  "sponsors_option_1": "Logo on event website",
+  "sponsors_option_2": "Logo on Conference pages in social networks",
+  "sponsors_option_3": "Logo in Newsletter",
+  "sponsors_option_4": "Logo on badges for participants",
+  "sponsors_option_5": "Logo on T-shirts for the speakers and lottery",
+  "sponsors_option_6": "Technical talk of the Sponsor’s employee at the Conference",
+  "sponsors_option_7": "Mobile banner at the Conference day",
+  "sponsors_option_8": "Sponsor's booth at the Conference day",
+  "sponsors_option_9": "Sponsor’s logo on video recordings of the Conference reports",
+  "sponsors_option_10": "Free participation of the Sponsor’s representatives to the Conference",
+  "sponsors_option_11": "Presence of a representative at the Speakers Dinner",
+  "sponsors_option_12": "Presentation by the Sponsor’s representative/recruiting session (7-10min)",
+  "sponsors_option_13": "Sponsor’s Questions included in the Conference feedback questionnaire",
   "poup_previous": "Previous",
   "poup_next": "Next"
 }
