--- a/resources/lang/ru/index.json
+++ b/resources/lang/ru/index.json
@@ -30,6 +30,19 @@
   "sponsors_mariia": "Мария",
   "sponsors_julia": "Юлия",
   "sponsors_program": "Скачать партнерскую программу",
+  "sponsors_option_1": "Логотип на сайте мероприятия",
+  "sponsors_option_2": "Логотип на страничках конференции в соцсетях",
+  "sponsors_option_3": "Логотип и имя компании в новостной рассылке",
+  "sponsors_option_4": "Логотип на бейджах участников",
+  "sponsors_option_5": "Логотип на футболках для докладчиков и розыгрыша",
+  "sponsors_option_6": "Доклад сотрудника компании на конференции",
+  "sponsors_option_7": "Баннер в дни конференции",
+  "sponsors_option_8": "Стенд спонсора в дни конференции",
+  "sponsors_option_9": "Логотип компании на видеозаписи докладов конференции",
+  "sponsors_option_10": "Рекрутинговая сессия (7-10 мин)",
+  "sponsors_option_11": "Добавления вопросов спонсора в форму обратной связи конференции",
+  "sponsors_option_12": "Бесплатные билеты для сотрудников компании (2 человека))",
+  "sponsors_option_13": "Присутствие представителя компании на Speakers Dinner (2 человека)",
   "poup_previous": "Назад",
   "poup_next": "Далее"
 }
