--- a/resources/lang/en/index.json
+++ b/resources/lang/en/index.json
@@ -10,14 +10,15 @@
   "heading_date": "September 30, 2018",
   "heading_list_1": "2nd Python conference in Odessa",
   "heading_list_2": "10+ of networking",
-  "heading_list_3": "3 formats",
+  "heading_list_3": "3 presentation formats",
   "heading_list_3_1": "Talks",
   "heading_list_3_2": "Tech Corner",
-  "heading_list_3_3": "Speakers Coach",
+  "heading_list_3_3": "Speakers' Coach",
   "heading_list_4": "Pre-party",
   "about_head": "About",
+  "about_txt_1": "It’s going to be the second Python - focused conference organized in Odessa. It will last for one full day and will feature three formats that will help the attendees to get the in-depth knowledge of current Python technologies as well as share their own experience, have their questions answered, and meet up with likeminded people",
   "tickets_head": "Tickets",
-  "history_txt": "7 декабря 2013 года состоялась встреча «OdessaPy». Собрались гости из разных уголков Украины, а также из России и Молдавии — более 75 человек. Программа была довольно насыщенной и освещала различные аспекты программирования на Python.",
+  "history_txt": "The first Python Conference in Odessa - OdessaPy -  was held in December 2013. It was attended by more than 75 guests from Ukraine, Russian Federation, and Moldova. The event program was quite saturated and covered various Python programming aspects.",
   "speakers_head": "Speakers",
   "schedule_head": "Schedule",
   "schedule_txt": "The conference program will be available two weeks before the event",
