--- a/resources/lang/ru/index.json
+++ b/resources/lang/ru/index.json
@@ -2,7 +2,7 @@
   "lang": "ru",
   "lang_link_ru": "javascript:void(0)",
   "lang_link_en": "en",
-  "menu_about": "О конференци",
+  "menu_about": "О конференции",
   "menu_speakers": "Доклады",
   "menu_schedule": "Расписание",
   "menu_sponsors": "Спонсоры",
@@ -13,11 +13,12 @@
   "heading_list_3": "3 формата",
   "heading_list_3_1": "Доклад",
   "heading_list_3_2": "Tech Corner",
-  "heading_list_3_3": "Speakers Coach",
+  "heading_list_3_3": "Speakers' Coach",
   "heading_list_4": "Pre-party",
-  "about_head": "О конференци",
+  "about_head": "О конференции",
+  "about_txt_1": "PyCon будет уже второй конференцией посвященной разработке на Python которая пройдет в Одессе. Она будет длиться один полный день и будет совмещать три формата которые как помогут нашим гостям получить глубокое понимание новых Python технологий так и позволят им поделиться своим опытом, получить ответы на вопросы и провести время с единомышленниками",
   "tickets_head": "Билеты",
-  "history_txt": "7 декабря 2013 года состоялась встреча «OdessaPy». Собрались гости из разных уголков Украины, а также из России и Молдавии — более 75 человек. Программа была довольно насыщенной и освещала различные аспекты программирования на Python.",
+  "history_txt": "В декабре 2013 года состоялась первая Python конференция в Одессе - «OdessaPy». Собрались гости из разных уголков Украины, а также из России и Молдавии — более 75 человек. Программа была довольно насыщенной и освещала различные аспекты программирования на Python.",
   "speakers_head": "Доклады",
   "schedule_head": "Расписание",
   "schedule_txt": "Программа конференции будет доступна за 2 недели до мероприятия",
