--- a/resources/lang/ru/index.json
+++ b/resources/lang/ru/index.json
@@ -44,6 +44,7 @@
   "sponsors_option_11": "Добавления вопросов спонсора в форму обратной связи конференции",
   "sponsors_option_12": "Бесплатные билеты для сотрудников компании (2 человека))",
   "sponsors_option_13": "Присутствие представителя компании на Speakers Dinner (2 человека)",
+  "sponsors_option_14": "Скидка на билеты на конференцию сотрудникам компании",
   "poup_previous": "Назад",
   "poup_next": "Далее"
 }
