--- a/resources/lang/ru/index.json
+++ b/resources/lang/ru/index.json
@@ -30,7 +30,7 @@
   "sponsors_txt_5": "или постучитесь в Telegram",
   "sponsors_mariia": "Мария",
   "sponsors_julia": "Юлия",
-  "sponsors_program": "Скачать партнерскую программу",
+  "sponsors_program": "Спонсорские пакеты",
   "sponsors_option_1": "Логотип на сайте мероприятия",
   "sponsors_option_2": "Логотип на страничках конференции в соцсетях",
   "sponsors_option_3": "Логотип и имя компании в новостной рассылке",
