social snippet metadata added

--- a/resources/lang/ru/index.json
+++ b/resources/lang/ru/index.json
@@ -1,5 +1,7 @@
 {
   "lang": "ru",
+  "meta_title": "OdessaPy Conference",
+  "meta_description": "OdessaPy Conference is the second Python-focused conference organized in Odessa",
   "lang_link_ru": "javascript:void(0)",
   "lang_link_en": "en",
   "menu_about": "О конференции",
