--- a/resources/lang/en/index.json
+++ b/resources/lang/en/index.json
@@ -1,5 +1,7 @@
 {
   "lang": "en",
+  "meta_title": "OdessaPy Conference",
+  "meta_description": "OdessaPy Conference is the second Python-focused conference organized in Odessa",
   "lang_link_ru": "../",
   "lang_link_en": "javascript:void(0)",
   "menu_about": "About",
