--- a/resources/lang/en/index.json
+++ b/resources/lang/en/index.json
@@ -32,7 +32,7 @@
   "sponsors_txt_5": "Telegram us",
   "sponsors_mariia": "Mariia",
   "sponsors_julia": "Julia",
-  "sponsors_program": "Sponsorship Packages",
+  "sponsors_program": "Sponsorship Proposal",
   "sponsors_option_1": "Logo on event website",
   "sponsors_option_2": "Logo on Conference pages in social networks",
   "sponsors_option_3": "Logo in Newsletter",
