social snippet metadata added

--- a/resources/lang/ru/index.json
+++ b/resources/lang/ru/index.json
@@ -18,7 +18,7 @@
   "heading_list_3_3": "Speakers' Coach",
   "heading_list_4": "Pre-party",
   "about_head": "О конференции",
-  "about_txt_1": "PyCon будет уже второй конференцией посвященной разработке на Python которая пройдет в Одессе. Она будет длиться один полный день и будет совмещать три формата которые как помогут нашим гостям получить глубокое понимание новых Python технологий так и позволят им поделиться своим опытом, получить ответы на вопросы и провести время с единомышленниками",
+  "about_txt_1": "OdessaPy Conference будет уже второй конференцией посвященной разработке на Python которая пройдет в Одессе. Она будет длиться один полный день и будет совмещать три формата которые как помогут нашим гостям получить глубокое понимание новых Python технологий так и позволят им поделиться своим опытом, получить ответы на вопросы и провести время с единомышленниками",
   "tickets_head": "Билеты",
   "history_txt": "В декабре 2013 года состоялась первая Python конференция в Одессе - «OdessaPy». Собрались гости из разных уголков Украины, а также из России и Молдавии — более 75 человек. Программа была довольно насыщенной и освещала различные аспекты программирования на Python.",
   "speakers_head": "Доклады",
