--- a/resources/lang/en/index.json
+++ b/resources/lang/en/index.json
@@ -47,6 +47,7 @@
   "sponsors_option_12": "Presentation by the Sponsor’s representative/recruiting session (7-10min)",
   "sponsors_option_13": "Sponsor’s Questions included in the Conference feedback questionnaire",
   "sponsors_option_14": "Discount for conference tickets to company employees",
+  "sponsors_media_heading": "Media Partners",
   "poup_previous": "Previous",
   "poup_next": "Next"
 }
