--- a/resources/lang/ru/index.json
+++ b/resources/lang/ru/index.json
@@ -47,6 +47,7 @@
   "sponsors_option_12": "Бесплатные билеты для сотрудников компании (2 человека))",
   "sponsors_option_13": "Присутствие представителя компании на Speakers Dinner (2 человека)",
   "sponsors_option_14": "Скидка на билеты на конференцию сотрудникам компании",
+  "sponsors_media_heading": "Медиа партнеры",
   "poup_previous": "Назад",
   "poup_next": "Далее"
 }
