--- a/resources/lang/en/index.json
+++ b/resources/lang/en/index.json
@@ -48,6 +48,7 @@
   "sponsors_option_13": "Sponsor’s Questions included in the Conference feedback questionnaire",
   "sponsors_option_14": "Discount for conference tickets to company employees",
   "sponsors_media_heading": "Media Partners",
+  "volunteer": "Become Volunteer",
   "poup_previous": "Previous",
   "poup_next": "Next"
 }
