--- a/resources/lang/ru/index.json
+++ b/resources/lang/ru/index.json
@@ -48,6 +48,7 @@
   "sponsors_option_13": "Присутствие представителя компании на Speakers Dinner (2 человека)",
   "sponsors_option_14": "Скидка на билеты на конференцию сотрудникам компании",
   "sponsors_media_heading": "Медиа партнеры",
+  "volunteer": "Стать Волонтером",
   "poup_previous": "Назад",
   "poup_next": "Далее"
 }
