--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -49,8 +49,10 @@
   "sponsors_option_13": "Присутствие представителя компании на Speakers Dinner (2 человека)",
   "sponsors_option_14": "Скидка на билеты на конференцию сотрудникам компании",
   "sponsors_conference_heading": "Партнёры Конференции",
+  "sponsors_hr_heading": "HR Партнеры",
   "sponsors_media_heading": "Медиа партнеры",
   "volunteer": "Стать Волонтером",
+  "code_conduct": "Code of Conduct",
   "location_heading": "Локация",
   "location_address": "БЦ «Солнечный» ул. Солнечная, 5",
   "poup_previous": "Назад",
