--- a/resources/lang/html/en/index.json
+++ b/resources/lang/html/en/index.json
@@ -49,8 +49,10 @@
   "sponsors_option_13": "Sponsor’s Questions included in the Conference feedback questionnaire",
   "sponsors_option_14": "Discount for conference tickets to company employees",
   "sponsors_conference_heading": "Conference Partners",
+  "sponsors_hr_heading": "HR Partners",
   "sponsors_media_heading": "Media Partners",
   "volunteer": "Become Volunteer",
+  "code_conduct": "Code of Conduct",
   "location_heading": "Location",
   "location_address": "BC «Solnechnyiy», 5, Sonyachna St.",
   "poup_previous": "Previous",
