--- a/resources/lang/html/en/index.json
+++ b/resources/lang/html/en/index.json
@@ -49,7 +49,7 @@
   "sponsors_option_13": "Sponsor’s Questions included in the Conference feedback questionnaire",
   "sponsors_option_14": "Discount for conference tickets to company employees",
   "sponsors_conference_heading": "Conference Partners",
-  "sponsors_hr_heading": "HR Partners",
+  "sponsors_hr_heading": "HR Partner",
   "sponsors_media_heading": "Media Partners",
   "volunteer": "Become Volunteer",
   "code_conduct": "Code of Conduct",
