--- a/resources/lang/html/en/index.json
+++ b/resources/lang/html/en/index.json
@@ -20,6 +20,11 @@
   "heading_list_4": "Pre-party",
   "about_head": "About",
   "about_txt_1": "It’s going to be the second Python - focused conference organized in Odessa. It will last for one full day and will feature three formats that will help the attendees to get the in-depth knowledge of current Python technologies as well as share their own experience, have their questions answered, and meet up with likeminded people",
+  "about_advantages_1": "Посещение pre-party <span class='white-space-nw'>28 сентября</span>",
+  "about_advantages_2": "Участие в конференции <span class='white-space-nw'>28 сентября</span> (два потока докладов)",
+  "about_advantages_3": "Вкусные обеды и кофе-брейки",
+  "about_advantages_4": "Участие во всех розыгрышах и активностях конференции",
+  "about_advantages_5": "Посещение фуршета по окончанию конференции",
   "tickets_head": "Tickets",
   "history_txt": "The first Python Conference in Odessa - OdessaPy -  was held in December 2013. It was attended by more than 75 guests from Ukraine, Russian Federation, and Moldova. The event program was quite saturated and covered various Python programming aspects.",
   "speakers_head": "Speakers",
