--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -20,6 +20,11 @@
   "heading_list_4": "Pre-party",
   "about_head": "О конференции",
   "about_txt_1": "OdessaPy Conference будет уже второй конференцией посвященной разработке на Python которая пройдет в Одессе. Она будет длиться один полный день и будет совмещать три формата которые как помогут нашим гостям получить глубокое понимание новых Python технологий так и позволят им поделиться своим опытом, получить ответы на вопросы и провести время с единомышленниками",
+  "about_advantages_1": "Посещение pre-party <span class='white-space-nw'>28 сентября</span>",
+  "about_advantages_2": "Участие в конференции <span class='white-space-nw'>28 сентября</span> (два потока докладов)",
+  "about_advantages_3": "Вкусные обеды и кофе-брейки",
+  "about_advantages_4": "Участие во всех розыгрышах и активностях конференции",
+  "about_advantages_5": "Посещение фуршета по окончанию конференции",
   "tickets_head": "Билеты",
   "history_txt": "В декабре 2013 года состоялась первая Python конференция в Одессе - «OdessaPy». Собрались гости из разных уголков Украины, а также из России и Молдавии — более 75 человек. Программа была довольно насыщенной и освещала различные аспекты программирования на Python.",
   "speakers_head": "Доклады",
