--- a/resources/lang/html/en/index.json
+++ b/resources/lang/html/en/index.json
@@ -20,9 +20,9 @@
   "heading_list_4": "Pre-party",
   "about_head": "About",
   "about_txt_1": "It’s going to be the second Python - focused conference organized in Odessa. It will last for one full day and will feature three formats that will help the attendees to get the in-depth knowledge of current Python technologies as well as share their own experience, have their questions answered, and meet up with likeminded people",
-  "about_advantages_1": "Посещение pre-party <span class='white-space-nw'>28 сентября</span>",
-  "about_advantages_2": "Участие в конференции <span class='white-space-nw'>28 сентября</span> (два потока докладов)",
-  "about_advantages_3": "Вкусные обеды и кофе-брейки",
+  "about_advantages_1": "Посещение pre-party <strong class='white-space-nw'>28 сентября</strong>",
+  "about_advantages_2": "Участие в конференции <strong class='white-space-nw'>28 сентября</strong> (два потока докладов)",
+  "about_advantages_3": "Вкусные обеды и<br> кофе-брейки",
   "about_advantages_4": "Участие во всех розыгрышах и активностях конференции",
   "about_advantages_5": "Посещение фуршета по окончанию конференции",
   "tickets_head": "Tickets",
