--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -20,8 +20,8 @@
   "heading_list_4": "Pre-party",
   "about_head": "О конференции",
   "about_txt_1": "OdessaPy Conference будет уже второй конференцией посвященной разработке на Python которая пройдет в Одессе. Она будет длиться один полный день и будет совмещать три формата которые как помогут нашим гостям получить глубокое понимание новых Python технологий так и позволят им поделиться своим опытом, получить ответы на вопросы и провести время с единомышленниками",
-  "about_advantages_1": "Посещение pre-party <strong class='white-space-nw'>28 сентября</strong>",
-  "about_advantages_2": "Участие в конференции <strong class='white-space-nw'>28 сентября</strong> (два потока докладов)",
+  "about_advantages_1": "Посещение pre-party <span class='white-space-nw'>28 сентября</span>",
+  "about_advantages_2": "Участие в конференции <span class='white-space-nw'>28 сентября</span> (два потока докладов)",
   "about_advantages_3": "Вкусные обеды и<br> кофе-брейки",
   "about_advantages_4": "Участие во всех розыгрышах и активностях конференции",
   "about_advantages_5": "Посещение фуршета по окончанию конференции",
