--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -26,8 +26,7 @@
   "about_advantages_4": "Участие во всех розыгрышах и активностях конференции",
   "about_advantages_5": "Посещение фуршета по окончанию конференции",
   "tickets_head": "Билеты",
-  "history_txt": "В декабре 2013 года состоялась первая Python конференция в Одессе - «OdessaPy». Собрались гости из разных уголков Украины, а также из России и Молдавии — более 75 человек. Программа была довольно насыщенной и освещала различные аспекты программирования на Python.",
-  "speakers_head": "Доклады",
+  "history_txt": "В декабре 2013 года состоялась первая Python конференция в Одессе - «OdessaPy». Собрались гости из разных уголков Украины, а также из России и Молдавии — более 75 человек. Программа была довольно насыщенной и освещала различные аспекты программирования на Python.", "speakers_head": "Доклады",
   "schedule_head": "Расписание",
   "schedule_txt": "Программа конференции будет доступна за 2 недели до мероприятия",
   "sponsors_head": "Спонсоры",
