--- a/resources/lang/html/en/index.json
+++ b/resources/lang/html/en/index.json
@@ -20,8 +20,8 @@
   "heading_list_4": "Pre-party",
   "about_head": "About",
   "about_txt_1": "It’s going to be the second Python - focused conference organized in Odessa. It will last for one full day and will feature three formats that will help the attendees to get the in-depth knowledge of current Python technologies as well as share their own experience, have their questions answered, and meet up with likeminded people",
-  "about_advantages_1": "Attending pre-party on <strong class='white-space-nw'>September 28</strong>",
-  "about_advantages_2": "Taking part in the conference on <strong class='white-space-nw'>September 28th</strong> (two tracks of talks)",
+  "about_advantages_1": "Attending pre-party on <span class='white-space-nw'>September 28</span>",
+  "about_advantages_2": "Taking part in the conference on <span class='white-space-nw'>September 28th</span> (two tracks of talks)",
   "about_advantages_3": "Tasty lunches and <br> coffee breaks",
   "about_advantages_4": "Taking part in all contests and conference activities",
   "about_advantages_5": "Attending post-event reception with refreshments",
