--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -7,7 +7,7 @@
   "menu_about": "О конференции",
   "menu_speakers": "Доклады",
   "speakers_preparty_head": "Пре-пати",
-  "speakers_preparty_desc": "<span class='text-blue'>В субботу 29 сентября в 18:30</span>, мы приглашаем всех участников конференции на Pre-party. На этом техническом митапе мы будем обсуждать темы, которые важны в рамках развития soft skills разработчиков, лидеров команд, CTO, др специалистов.",
+  "speakers_preparty_desc": "<span class='text-blue'>В пятницу 28 сентября в 18:30</span>, мы приглашаем всех участников конференции на Pre-party, которое будет проходить в офисе компании Lohika, по адресу: г.Одесса, ул.Бунина, 1. На этом техническом митапе мы будем обсуждать темы, которые важны в рамках развития soft skills разработчиков, лидеров команд, CTO, др специалистов.",
   "speakers_preparty_registration": "Регистрация",
   "speakers_preparty_reg_note": "*Для участников конференции OdessaPY Conference участие в пре-пати бесплатное по предварительной регистрации",
   "speakers_main_desc": "<span class='text-blue'>В воскресенье 30 сентября с 09.30</span>, мы соберемся в БЦ «Солнечный», по адресу: ул Солнечная, 5 на Первой конференции посвященной node.js",
@@ -25,7 +25,7 @@
   "heading_list_4": "Pre-party",
   "about_head": "О конференции",
   "about_txt_1": "OdessaPy Conference будет уже второй конференцией посвященной разработке на Python которая пройдет в Одессе. Она будет длиться один полный день и будет совмещать три формата которые как помогут нашим гостям получить глубокое понимание новых Python технологий так и позволят им поделиться своим опытом, получить ответы на вопросы и провести время с единомышленниками",
-  "about_advantages_1": "Посещение pre-party <span class='white-space-nw'>29 сентября</span>",
+  "about_advantages_1": "Посещение pre-party <span class='white-space-nw'>28 сентября</span>",
   "about_advantages_2": "Участие в конференции <span class='white-space-nw'>30 сентября</span> (два потока докладов)",
   "about_advantages_3": "Вкусные обеды и<br> кофе-брейки",
   "about_advantages_4": "Участие во всех розыгрышах и активностях конференции",
