--- a/resources/lang/html/en/index.json
+++ b/resources/lang/html/en/index.json
@@ -20,7 +20,7 @@
   "heading_list_4": "Pre-party",
   "about_head": "About",
   "about_txt_1": "It’s going to be the second Python - focused conference organized in Odessa. It will last for one full day and will feature three formats that will help the attendees to get the in-depth knowledge of current Python technologies as well as share their own experience, have their questions answered, and meet up with likeminded people",
-  "about_advantages_1": "Attending pre-party on <span class='white-space-nw'>September 29</span>",
+  "about_advantages_1": "Attending pre-party on <span class='white-space-nw'>September 28</span>",
   "about_advantages_2": "Taking part in the conference on <span class='white-space-nw'>September 30th</span> (two tracks of talks)",
   "about_advantages_3": "Tasty lunches and <br> coffee breaks",
   "about_advantages_4": "Taking part in all contests and conference activities",
@@ -29,7 +29,7 @@
   "history_txt": "The first Python Conference in Odessa - OdessaPy - was held in December 2013. It was attended by more than 75 guests from Ukraine, Russian Federation, and Moldova. The event program was quite saturated and covered various Python programming aspects.",
   "speakers_head": "Speakers",
   "speakers_preparty_head": "Pre-party",
-  "speakers_preparty_desc": "The pre-party will happen on <span class='text-blue'>September 29th at 8:30 pm</span>. Our speakers will talk about a very important topic for developers, team leads, and CTOs - soft skills’ development. Attendees will be able to listen to our speakers, as well as discuss the issue during the breaks.",
+  "speakers_preparty_desc": "The pre-party will happen on <span class='text-blue'>September 28th at 8:30 pm</span> in the office of the company Lohika, 1, Bunina St. Our speakers will talk about a very important topic for developers, team leads, and CTOs - soft skills’ development. Attendees will be able to listen to our speakers, as well as discuss the issue during the breaks.",
   "speakers_preparty_registration": "Registration",
   "speakers_preparty_reg_note": "*For participants of the OdessaPY Conference, participation in the pre-party is free by prior registration",
   "speakers_main_desc": " ",
