--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -10,7 +10,7 @@
   "speakers_preparty_desc": "<span class='text-blue'>В пятницу 28 сентября в 18:30</span>, мы приглашаем всех участников конференции на Pre-party, которое будет проходить в офисе компании Lohika, по адресу: г.Одесса, ул.Бунина, 1. На этом техническом митапе мы будем обсуждать темы, которые важны в рамках развития soft skills разработчиков, лидеров команд, CTO, др специалистов.",
   "speakers_preparty_registration": "Регистрация",
   "speakers_preparty_reg_note": "*Для участников конференции OdessaPY Conference участие в пре-пати бесплатное по предварительной регистрации",
-  "speakers_main_desc": "<span class='text-blue'>В воскресенье 30 сентября с 09.30</span>, мы соберемся в БЦ «Солнечный», по адресу: ул Солнечная, 5 на Первой конференции посвященной node.js",
+  "speakers_main_desc": "<span class='text-blue'>В воскресенье 30 сентября с 09.30</span>, мы соберемся в БЦ «Солнечный», по адресу: ул Солнечная, 5 конференции для python разработчиков",
   "menu_schedule": "Расписание",
   "menu_sponsors": "Спонсоры",
   "menu_location": "Локация",
