added silver sponsor beetroot

--- a/resources/lang/html/en/index.json
+++ b/resources/lang/html/en/index.json
@@ -61,6 +61,8 @@
   "sponsors_conference_heading": "Conference Partners",
   "sponsors_hr_heading": "HR Partner",
   "sponsors_media_heading": "Media Partners",
+  "sponsors_head": "Sponsors",
+  "sponsors_silver": "Silver",
   "volunteer": "Become Volunteer",
   "code_conduct": "Code of Conduct",
   "location_heading": "Location",
