--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -60,6 +60,8 @@
   "sponsors_conference_heading": "Партнёры Конференции",
   "sponsors_hr_heading": "HR Партнер",
   "sponsors_media_heading": "Медиа партнеры",
+  "sponsors_head": "Спонсоры",
+  "sponsors_silver": "Silver",
   "volunteer": "Стать Волонтером",
   "code_conduct": "Code of Conduct",
   "location_heading": "Локация",
