--- a/resources/lang/html/en/index.json
+++ b/resources/lang/html/en/index.json
@@ -25,10 +25,12 @@
   "about_advantages_3": "Tasty lunches and <br> coffee breaks",
   "about_advantages_4": "Taking part in all contests and conference activities",
   "about_advantages_5": "Attending post-event reception with refreshments",
+  "about_advantages_6": "Video reports access",
   "tickets_head": "Tickets",
   "history_txt": "The first Python Conference in Odessa - OdessaPy - was held in December 2013. It was attended by more than 75 guests from Ukraine, Russian Federation, and Moldova. The event program was quite saturated and covered various Python programming aspects.",
   "speakers_head": "Speakers",
   "speakers_preparty_head": "Pre-party",
+  "speakers_preparty_theme": "<span class='text-blue'>Soft skills development</span>",
   "speakers_preparty_desc": "The pre-party will happen on <span class='text-blue'>September 28th at 8:30 pm</span> in the office of the company Lohika, 1, Bunina St. Our speakers will talk about a very important topic for developers, team leads, and CTOs - soft skills’ development. Attendees will be able to listen to our speakers, as well as discuss the issue during the breaks.",
   "speakers_preparty_registration": "Registration",
   "speakers_preparty_reg_note": "*For participants of the OdessaPY Conference, participation in the pre-party is free by prior registration",
@@ -61,8 +63,11 @@
   "sponsors_conference_heading": "Conference Partners",
   "sponsors_hr_heading": "HR Partner",
   "sponsors_media_heading": "Media Partners",
+  "sponsors_heading": "Sponsors",
+  "sponsors_tech_heading": "Technical Partner",
   "sponsors_head": "Sponsors",
   "sponsors_silver": "Silver",
+  "history_head": "Our history",
   "volunteer": "Become Volunteer",
   "code_conduct": "Code of Conduct",
   "location_heading": "Location",
