--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -7,6 +7,7 @@
   "menu_about": "О конференции",
   "menu_speakers": "Доклады",
   "speakers_preparty_head": "Пре-пати",
+  "speakers_preparty_theme": "<span class='text-blue'>Soft skills development</span>",
   "speakers_preparty_desc": "<span class='text-blue'>В пятницу 28 сентября в 18:30</span>, мы приглашаем всех участников конференции на Pre-party, которое будет проходить в офисе компании Lohika, по адресу: г.Одесса, ул.Бунина, 1. На этом техническом митапе мы будем обсуждать темы, которые важны в рамках развития soft skills разработчиков, лидеров команд, CTO, др специалистов.",
   "speakers_preparty_registration": "Регистрация",
   "speakers_preparty_reg_note": "*Для участников конференции OdessaPY Conference участие в пре-пати бесплатное по предварительной регистрации",
@@ -30,6 +31,7 @@
   "about_advantages_3": "Вкусные обеды и<br> кофе-брейки",
   "about_advantages_4": "Участие во всех розыгрышах и активностях конференции",
   "about_advantages_5": "Посещение фуршета по окончанию конференции",
+  "about_advantages_6": "Доступ к видеозаписям докладов",
   "tickets_head": "Билеты",
   "history_txt": "В декабре 2013 года состоялась первая Python конференция в Одессе - «OdessaPy». Собрались гости из разных уголков Украины, а также из России и Молдавии — более 75 человек. Программа была довольно насыщенной и освещала различные аспекты программирования на Python.", "speakers_head": "Доклады",
   "schedule_head": "Расписание",
@@ -60,8 +62,11 @@
   "sponsors_conference_heading": "Партнёры Конференции",
   "sponsors_hr_heading": "HR Партнер",
   "sponsors_media_heading": "Медиа партнеры",
+  "sponsors_heading": "Спонсоры",
+  "sponsors_tech_heading": "Технический Партнер",
   "sponsors_head": "Спонсоры",
   "sponsors_silver": "Silver",
+  "history_head": "История",
   "volunteer": "Стать Волонтером",
   "code_conduct": "Code of Conduct",
   "location_heading": "Локация",
