--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -66,7 +66,7 @@
   "sponsors_tech_heading": "Технический Партнер",
   "sponsors_head": "Спонсоры",
   "sponsors_silver": "Silver",
-  "history_head": "История",
+  "history_head": "Наши Проекты",
   "volunteer": "Стать Волонтером",
   "code_conduct": "Code of Conduct",
   "location_heading": "Локация",
