--- a/resources/lang/html/en/index.json
+++ b/resources/lang/html/en/index.json
@@ -67,7 +67,7 @@
   "sponsors_tech_heading": "Technical Partner",
   "sponsors_head": "Sponsors",
   "sponsors_silver": "Silver",
-  "history_head": "Our history",
+  "history_head": "Our Projects",
   "volunteer": "Become Volunteer",
   "code_conduct": "Code of Conduct",
   "location_heading": "Location",
