--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -66,6 +66,7 @@
   "sponsors_tech_heading": "Технический Партнер",
   "sponsors_head": "Спонсоры",
   "sponsors_silver": "Silver",
+  "sponsors_golden": "Golden",
   "history_head": "Наши Проекты",
   "volunteer": "Стать Волонтером",
   "code_conduct": "Code of Conduct",
