--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -11,7 +11,7 @@
   "speakers_preparty_desc": "<span class='text-blue'>В пятницу 28 сентября в 18:30</span>, мы приглашаем всех участников конференции на Pre-party, которое будет проходить в офисе компании Lohika, по адресу: г.Одесса, ул.Бунина, 1. На этом техническом митапе мы будем обсуждать темы, которые важны в рамках развития soft skills разработчиков, лидеров команд, CTO, др специалистов.",
   "speakers_preparty_registration": "Регистрация",
   "speakers_preparty_reg_note": "*Для участников конференции OdessaPY Conference участие в пре-пати бесплатное по предварительной регистрации",
-  "speakers_main_desc": "<span class='text-blue'>В воскресенье 30 сентября с 09.30</span>, мы соберемся в БЦ «Солнечный», по адресу: ул Солнечная, 5 на конференции для python разработчиков",
+  "speakers_main_desc": "<span class='text-blue'>В воскресенье 30 сентября с 09.00</span>, мы соберемся в БЦ «Солнечный», по адресу: ул Солнечная, 5 на конференции для python разработчиков",
   "menu_schedule": "Расписание",
   "menu_sponsors": "Спонсоры",
   "menu_location": "Локация",
@@ -25,7 +25,7 @@
   "heading_list_3_3": "Speakers' Coach",
   "heading_list_4": "Pre-party",
   "about_head": "О конференции",
-  "about_txt_1": "OdessaPy Conference будет уже второй конференцией посвященной разработке на Python которая пройдет в Одессе. Она будет длиться один полный день и будет совмещать три формата которые как помогут нашим гостям получить глубокое понимание новых Python технологий так и позволят им поделиться своим опытом, получить ответы на вопросы и провести время с единомышленниками",
+  "about_txt_1": "OdessaPy Conference будет уже второй конференцией посвященной разработке на Python которая пройдет в Одессе 30 сентября. Она будет длиться один полный день и будет совмещать три формата которые как помогут нашим гостям получить глубокое понимание новых Python технологий так и позволят им поделиться своим опытом, получить ответы на вопросы и провести время с единомышленниками",
   "about_advantages_1": "Посещение pre-party <span class='white-space-nw'>28 сентября</span>",
   "about_advantages_2": "Участие в конференции <span class='white-space-nw'>30 сентября</span> (два потока докладов)",
   "about_advantages_3": "Вкусные обеды и<br> кофе-брейки",
