shedule subtitles added

--- a/resources/lang/html/en/index.json
+++ b/resources/lang/html/en/index.json
@@ -31,6 +31,7 @@
   "history_txt": "The first Python Conference in Odessa - OdessaPy - was held in December 2013. It was attended by more than 75 guests from Ukraine, Russian Federation, and Moldova. The event program was quite saturated and covered various Python programming aspects.",
   "speakers_head": "Speakers",
   "speakers_preparty_head": "Pre-party",
+  "speakers_preparty_subtitle": "Lohika, Bunina st, 1",
   "speakers_preparty_theme": "<span class='text-blue'>Soft skills development</span>",
   "speakers_preparty_desc": "The pre-party will happen on <span class='text-blue'>September 28th at 8:30 pm</span> in the office of the company Lohika, 1, Bunina St. Our speakers will talk about a very important topic for developers, team leads, and CTOs - soft skills’ development. Attendees will be able to listen to our speakers, as well as discuss the issue during the breaks.",
   "speakers_preparty_registration": "Registration",
@@ -38,6 +39,7 @@
   "speakers_main_desc": " ",
   "schedule_head": "Schedule",
   "schedule_txt": "The conference program will be available two weeks before the event",
+  "shedule_description": "29 september, BC «Solnechnyiy», 5, Sonyachna St.",
   "sponsors_head": "Sponsorship proposal",
   "sponsors_txt_1": "We are glad to offer you our sponsorship packages for Node.js Conference. Contact us to learn more or share your unique idea with us",
   "sponsors_txt_2": "We’re looking forward to create a custom offer for you and find the best possible way to connect you with our audience!",
