--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -7,6 +7,7 @@
   "menu_about": "О конференции",
   "menu_speakers": "Доклады",
   "speakers_preparty_head": "Пре-пати",
+  "speakers_preparty_subtitle": "Одесский офис компании Lohika, адрес: ул.Бунина, 1",
   "speakers_preparty_theme": "<span class='text-blue'>Soft skills development</span>",
   "speakers_preparty_desc": "<span class='text-blue'>В пятницу 28 сентября в 18:30</span>, мы приглашаем всех участников конференции на Pre-party, которое будет проходить в офисе компании Lohika, по адресу: г.Одесса, ул.Бунина, 1. На этом техническом митапе мы будем обсуждать темы, которые важны в рамках развития soft skills разработчиков, лидеров команд, CTO, др специалистов.",
   "speakers_preparty_registration": "Регистрация",
@@ -37,6 +38,7 @@
   "history_txt": "В декабре 2013 года состоялась первая Python конференция в Одессе - «OdessaPy». Собрались гости из разных уголков Украины, а также из России и Молдавии — более 75 человек. Программа была довольно насыщенной и освещала различные аспекты программирования на Python.", "speakers_head": "Доклады",
   "schedule_head": "Расписание",
   "schedule_txt": "Программа конференции будет доступна за 2 недели до мероприятия",
+  "shedule_description": "29 сентября, БЦ \"Солнечный\", ул. Солнечная, 5",
   "sponsors_head": "Спонсоры",
   "sponsors_txt_1": "Мы рады обсудить с Вами дополнительные условия партнерства, которые будут наиболее интересны для Вас, в индивидуальном порядке.",
   "sponsors_txt_2": "Хотите стать спонсором?",
