head change and presentation icons added

--- a/resources/lang/html/ru/index.json
+++ b/resources/lang/html/ru/index.json
@@ -26,6 +26,7 @@
   "heading_list_3_3": "Speakers' Coach",
   "heading_list_4": "Pre-party",
   "heading_start": "Начало конференции <br> 30 сентября 09:00",
+  "heading_share": "Делимся материалами конференции :)",
   "about_head": "О конференции",
   "about_txt_1": "OdessaPy Conference будет уже второй конференцией посвященной разработке на Python которая пройдет в Одессе 30 сентября. Она будет длиться один полный день и будет совмещать три формата которые как помогут нашим гостям получить глубокое понимание новых Python технологий так и позволят им поделиться своим опытом, получить ответы на вопросы и провести время с единомышленниками",
   "about_advantages_1": "Посещение pre-party <span class='white-space-nw'>28 сентября</span>",
