--- a/resources/lang/html/en/index.json
+++ b/resources/lang/html/en/index.json
@@ -19,6 +19,7 @@
   "heading_list_3_3": "Speakers' Coach",
   "heading_list_4": "Pre-party",
   "heading_start": "Conference start <br> September 30 09:00",
+  "heading_share": "SHARE THE CONFERENCE MATERIALS :)",
   "about_head": "About",
   "about_txt_1": "It’s going to be the second Python - focused conference organized in Odessa. It will last for one full day and will feature three formats that will help the attendees to get the in-depth knowledge of current Python technologies as well as share their own experience, have their questions answered, and meet up with likeminded people",
   "about_advantages_1": "Attending pre-party on <span class='white-space-nw'>September 28</span>",
